[tool.poetry]
name = "homework1"
version = "0.1.0"
description = ""
authors = ["Daniel Petti <djpetti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
isort = "^5.9.3"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
skip = "('.eggs', '.git', '.venv', 'build', 'dist')"
